# system-de

./: CHANGELOG.md  LICENSE  README.md  cabal.project  system-de.cabal
app/: Main.hs
lib/Language/: SystemDE.hs
