cabal-version:      3.0
name:               system-de
version:            0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Melanie Brown
maintainer:         brown.m@pm.me
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common settings
  ghc-options:        -Wall -Wno-unticked-promoted-constructors
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

library
  import:         settings
  hs-source-dirs: lib
  build-depends:
    , base  >=4.18
    , containers
    , control-block
    , list1
    , mtl
    , text
    , transformers

  exposed-modules:
    Language.SystemDE
